--- a/decarbFrontEnd/src/index.html
+++ b/decarbFrontEnd/src/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <router-outlet>
+    <app-root></app-root>
+  </router-outlet>
+  
 </body>
 </html>
