Integration of maps and journey

--- a/decarbFrontEnd/src/index.html
+++ b/decarbFrontEnd/src/index.html
@@ -2,15 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Hello</title>
+  <title>Angular App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+  <title>Angular Google Maps</title>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNBM20_Bc2on1-q14X8NE-hWTa1imUhH4&libraries=places" async defer></script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-  <router-outlet>
     <app-root></app-root>
-  </router-outlet>
+  
   
 </body>
 </html>
